
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support Forum: http://www.freezedown.org/forum
    (order is reverse-chronologic)
    ******************************************************* 
     

Darkbot 8rc4: May 13, 2009
	- Added the "You must specify a search string" message to
	  RANDQ and RANDQ commands with no arguments.
	- RANDQ and RANDQ commands doesn't crash anymore without
 	  arguments. I changed the command parser a small amount, 
	  so these may pop up a little until all commands have
	  been transitioned. -Ron
	- Sleep command now checks for too many args, this is part
	  of the command structure now, so more commands are to follow
	  probably.
	- MSG_INVOKE'd commands now also check for too many arguments.
	- Commands with less arguments than expected now show
	  help messages again.
	- Fixed crash error on ADDUSER command.
	- Fixed retarded error in MEM command where I was trying
          to change the contents of a const variable.
	- Made OS, MEM, CMDCHAR, and CPU commands check for too many arguments.
	- Fixed OS command on Windows.
	- Fixed chanserv_random_stuff.
	- Fixed TELL, RDB, and DIE commands crashing with
          no args.
	- Fixed NICK, METAR, TAR commands from crashing with
	  no arguments.
	- Fixed stats command crashing with no arguments.
	- Fixed alarmclock function.
	- Fixed permbans command not outputting help for null
	  input. More to come.
 	- Fixed several commands that crashed not checking for
	  a null argument array. The fix I did looks sort of 
 	  retarded, but I found if i didn't check args[0] and args
	  both, it would crash on different command types.
	  Go figure. This fix works and I'll work on bettering it.
Darkbot 8rc4: April 30, 2009
	- Fixed extensions.m4 file from discriminating against
	  me using a newer version of automake than 1.9.6, and
  	  removed a few automake warnings.
	- Fixed autotopic only using first word of input.