@@ -7,6 +7,7 @@
      
 
 Darkbot 8rc4: May 13, 2009
+	- INFO2 command now outputs correctly in privmsg.
 	- Added the "You must specify a search string" message to
 	  RANDQ and RANDQ commands with no arguments.
 	- RANDQ and RANDQ commands doesn't crash anymore without
